--- a/app/assets/stylesheets/headerFooter.scss
+++ b/app/assets/stylesheets/headerFooter.scss
@@ -1,15 +1,46 @@
+@import "variables";
+
 header, footer {
   padding: 15px 0;
 }
 
+.side-menu, header {
+  position: fixed;
+  top: 0;
+}
+
 header {
-  height: 40px;
+  overflow: hidden;
+  width: 100%;
+  height: 90px;
   border-bottom: 1px lightgray solid;
   box-shadow: 0 2px 3px 0  rgba(141, 142, 138, 0.30);
+  &.mdl-layout__header {
+    background: white;
+    .mdl-layout__header-row {
+      color: $font-color-body !important;
+      h3 {
+        margin-left: 10px;
+      }
+      .mdl-layout-title, h3 {
+        padding: 30px 0 5px 0;
+      }
+    }
+  }
+}
+
+.mdl-layout__drawer-button, .mdl-layout-icon {
+  color: $font-color-body !important;
+  position: fixed;
+  padding-top: 15px;
+}
+
+.wrapper.content {
+  margin-top: 85px;
+  min-height: 500px;
 }
 
 footer {
-  height: 60px;
   background: black;
   color: white;
   a {
