--- a/app/assets/stylesheets/headerFooter.scss
+++ b/app/assets/stylesheets/headerFooter.scss
@@ -41,6 +41,11 @@ header {
 }
 
 footer {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding: 1rem;
   background: black;
   color: white;
   a {
