--- a/app/views/home/landing.html.erb
+++ b/app/views/home/landing.html.erb
@@ -1,15 +1,36 @@
-<h1>Welcome to NW Kendo</h1>
-<div>
-  Lots of content here
- <ul>
-   <li>
-     - Location
-   </li>
-   <li>
-     - practice hours
-   </li>
-   <li>
-     - ...
-   </li>
- </ul>
-</div>
+<% if @images.present? && @images.length == 1 %>
+    <% image = @images.first %>
+    <%= image_tag image.url, class: 'front-image', alt:@image.title, title: image.description %>
+<% elsif @images.present? %>
+    <div id="landingPageCarousel" class="carousel slide" data-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-inner">
+          <% @images.each_with_index do |image, index| %>
+              <% klasses = 'carousel-item ' %>
+              <% klasses += 'active' if index == 0 %>
+              <div class="<%=klasses%>">
+                <%= image_tag image.url, class: 'front-image d-block w-100', alt: image.title, title: image.description %>
+              </div>
+          <%end%>
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#landingPageCarousel" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#landingPageCarousel" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+<%else%>
+    No images added yet
+<%end%>
+<%if current_admin%>
+    <div class="admin-panel">
+      <button id="show-dialog" type="button" class="mdl-button">Manage Images</button>
+      <dialog class="mdl-dialog" style="width: 90%">
+        <%= render partial: 'images/manage_images' %>
+      </dialog>
+    </div>
+<%end%>
