--- a/app/assets/stylesheets/general.scss
+++ b/app/assets/stylesheets/general.scss
@@ -8,7 +8,7 @@ body {
   .mdl-layout__container {
     padding-bottom: 100px;
   }
-  .mdl-grid {
+  .kendo-mdl-grid {
     margin: 80px 0;
   }
   .notice, .alert {
