--- a/app/assets/stylesheets/manage.scss
+++ b/app/assets/stylesheets/manage.scss
@@ -8,4 +8,12 @@
   .manage-subheader {
     margin-top: 0;
   }
+  .scroll-table {
+     max-height: 300px;
+    overflow: scroll;
+  }
+  .add-button {
+    display: inline-block;
+    margin-top: 30px;
+  }
 }
