--- a/app/views/images/edit.erb
+++ b/app/views/images/edit.erb
@@ -1,3 +1,3 @@
-<div class="image-form">
+<div class="image-form nw-form">
   <%= render :partial => "form", :locals => { :image => @image } %>
 </div>
