--- a/app/assets/stylesheets/general.scss
+++ b/app/assets/stylesheets/general.scss
@@ -23,4 +23,42 @@ body {
   .hide {
     display: none;
   }
+
+  .nw-form form {
+    text-align: center;
+    .preview img {
+      width: 200px;
+      padding-bottom: 50px;
+      &.edit-preview-img:hover {
+        width: 100%;
+      }
+    }
+    .mdl-textfield {
+      width: 90%;
+    }
+    .image-save-button {
+      width: 200px;
+    }
+    .dropdown-menu {
+      width: 250px;
+      max-height: 400px;
+      overflow: scroll;
+    }
+    select {
+      padding: 7px;
+      margin-right: 5px;
+    }
+    .dates {
+      margin: 30px 0;
+      .date {
+        margin: 0 30px;
+      }
+    }
+  }
+  a.mdl-button {
+    &:hover {
+      text-decoration: none;
+      color: inherit;
+    }
+  }
 }
