--- a/app/assets/stylesheets/images.scss
+++ b/app/assets/stylesheets/images.scss
@@ -40,22 +40,9 @@ table.image-table {
   }
 }
 
-.image-form form {
-  text-align: center;
-  .preview img {
-    width: 200px;
-    padding-bottom: 50px;
-  }
-  .mdl-textfield {
-    width: 90%;
-  }
-  .image-save-button {
-    width: 200px;
-  }
-  .dropdown-menu {
-    width: 250px;
-    max-height: 400px;
-    overflow: scroll;
+.image-form {
+  .manage-photographer {
+    margin-left: 50px;
   }
 }
 
