--- a/app/assets/stylesheets/images.scss
+++ b/app/assets/stylesheets/images.scss
@@ -1,3 +1,6 @@
+@import "mixin";
+@import "variables";
+
 img {
   width: 100%;
 }
@@ -5,15 +8,15 @@ img {
   table-layout:fixed;
   width:100%;
 }
-.image-table td, th {
-  width: 100%;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  -o-text-overflow: ellipsis;
-}
+
 table.image-table {
   width: 100%;
+  .icon {
+    width: 5%;
+    i {
+      color: $font-color-body;
+    }
+  }
   .preview {
     width: 10%;
     .preview-img {
@@ -21,13 +24,13 @@ table.image-table {
     }
   }
   .title, .url {
-    width: 10%;
+    @include truncation(10%);
   }
   .photographer {
-    width: 5%;
+    @include truncation(5%);
   }
   .description {
-    width: 30%;
+    @include truncation(30%);
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -43,6 +46,11 @@ table.image-table {
 .image-form {
   .manage-photographer {
     margin-left: 50px;
+  }
+  .for_page i {
+    font-size: 40px;
+    width: 40px;
+    color: gray;
   }
 }
 
