--- a/app/assets/stylesheets/manage.scss
+++ b/app/assets/stylesheets/manage.scss
@@ -1,3 +1,4 @@
+@import "variables";
 .manage {
   .manage-header, .manage-subheader {
     text-align: center;
@@ -15,5 +16,12 @@
   .add-button {
     display: inline-block;
     margin-top: 30px;
+  }
+
+  .image-type {
+    padding: 0;
+    a {
+      color: $font-color-body;
+    }
   }
 }
