--- a/app/views/images/manage.erb
+++ b/app/views/images/manage.erb
@@ -4,7 +4,7 @@
 
     <div class="mdl-cell mdl-cell--8-col">
       <h3 class="manage-header"><%= I18n.t("manage.images") %></h3>
-      <h4 class="manage-subheader">for the <%= I18n.t("manage.#{@type}.header") %></h4>
+      <h4 class="manage-subheader"><%= I18n.t("manage.#{@type}.header") %></h4>
     </div>
 
     <div class="mdl-cell mdl-cell--2-col">
@@ -18,6 +18,7 @@
     <table class="mdl-data-table mdl-js-data-table image-table">
       <thead>
       <tr>
+        <th class="mdl-data-table__cell--non-numeric icon"></th>
         <th class="mdl-data-table__cell--non-numeric preview">Preview</th>
         <th class="mdl-data-table__cell--non-numeric url">URL</th>
         <th class="mdl-data-table__cell--non-numeric title">Title</th>
@@ -31,6 +32,9 @@
           <% @images.each do |image| %>
               <% url = image.url %>
               <tr class="view-<%=image.id%>">
+                <td class="mdl-data-table__cell--non-numeric icon">
+                  <i class="material-icons"><%= image.for_page %></i>
+                </td>
                 <td class="mdl-data-table__cell--non-numeric preview">
                   <%= image_tag url, {alt: image.title, title: image.description, class: 'preview-img'} %>
                 </td>
