--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -4,9 +4,9 @@
       More Information
     </div>
     <ul class="mdl-mini-footer__link-list">
-      <li><a href="#">Help</a></li>
-      <li><a href="#">Privacy and Terms</a></li>
-      <li><a href="#">User Agreement</a></li>
+      <li><%= link_to 'FAQ', question_path %></li>
+      <li><%= link_to 'Terms of Usage', terms_path %></li>
+      <li><%= link_to 'Credits', credits_path %></li>
     </ul>
   </div>
   <div class="mdl-mini-footer__right-section">
