--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -4,7 +4,7 @@
       More Information
     </div>
     <ul class="mdl-mini-footer__link-list">
-      <li><%= link_to 'FAQ', question_path %></li>
+      <li><%= link_to 'FAQ', faq_path %></li>
       <li><%= link_to 'Terms of Usage', terms_path %></li>
       <li><%= link_to 'Credits', credits_path %></li>
     </ul>
