--- a/app/assets/stylesheets/general.scss
+++ b/app/assets/stylesheets/general.scss
@@ -1,3 +1,4 @@
+@import "variables";
 body {
   font-family: "Helvetica Neue", Arial, sans-serif;
   padding: 0;
@@ -5,6 +6,16 @@ body {
   margin: 0;
   padding-bottom: 6rem;
   min-height: 100%;
+  a {
+    color: $font-color-body;
+    &:hover {
+      color: lighten($font-color-body, 30%);
+      text-decoration: none;
+    }
+  }
+  table {
+    margin-bottom: 30px;
+  }
   .mdl-layout__container {
     padding-bottom: 100px;
   }
