--- a/app/assets/stylesheets/manage.scss
+++ b/app/assets/stylesheets/manage.scss
@@ -1,5 +1,8 @@
 @import "variables";
 .manage {
+  thead {
+    background: lightsteelblue;
+  }
   .manage-header, .manage-subheader {
     text-align: center;
   }
@@ -17,11 +20,10 @@
     display: inline-block;
     margin-top: 30px;
   }
-
   .image-type {
     padding: 0;
-    a {
-      color: $font-color-body;
-    }
+  }
+  .manage-menu{
+    position: fixed;
   }
 }
