--- a/app/views/home/faq.erb
+++ b/app/views/home/faq.erb
@@ -1,3 +1,24 @@
-<div class="info-pages">
+<div class="info-pages faq">
   <h4>FAQ</h4>
+  <div id="accordion" role="tablist" aria-multiselectable="true">
+    <% @questions.each_with_index do |question, index|%>
+        <div class="card">
+          <div class="card-header" role="tab" id="header-<%=index%>">
+            <h5 class="mb-0">
+              <a data-toggle="collapse" data-parent="#accordion" href="#collapse-<%=index%>" aria-expanded="true" aria-controls="collapse-<%=index%>">
+                <%= question.question.capitalize %>
+                <i class="material-icons arrow-down">keyboard_arrow_down</i>
+              </a>
+            </h5>
+          </div>
+
+          <div id="collapse-<%=index%>" class="collapse show" role="tabpanel" aria-labelledby="heading-<%=index%>">
+            <div class="card-block">
+              <%= question.answer.capitalize %>
+            </div>
+          </div>
+        </div>
+    <%end%>
+  </div>
 </div>
+
