--- a/app/views/home/manage.erb
+++ b/app/views/home/manage.erb
@@ -1,44 +1,97 @@
 <div class="manage">
   <div class="mdl-grid">
-    <div class="mdl-cell mdl-cell--2-col"></div>
-
-    <div class="mdl-cell mdl-cell--8-col">
-      <h3 class="manage-header">Manage this app</h3>
+    <div class="mdl-cell mdl-cell--3-col">
+      <div class="manage-menu">
+        <h4 class="manage-header">Manage</h4>
+        <!--Content table-->
+        <ol class='manage-menu-list'>
+          <li class="manage-menu-item">
+            <%= link_to 'Media', '#media' %>
+          </li>
+          <li class="manage-menu-item">
+            <%= link_to 'Footer', '#footer' %>
+          </li>
+        </ol>
+      </div>
     </div>
 
-    <div class="mdl-cell mdl-cell--2-col">
-    </div>
-  </div>
-
-  <div class="scroll-table">
-    <table class="mdl-data-table mdl-js-data-table manage-table">
-      <!---->
-      <tbody>
-        <tr class="manage-row">
-          <th class="mdl-data-table__cell--non-numeric main">
-            <h3>Images</h3>
-          </th>
-          <td class="mdl-data-table__cell--non-numeric description">
-            <ul>
-              <% @all_image_types.each do |type| %>
+    <div class="mdl-cell mdl-cell--9-col">
+      <!--Content-->
+      <div class="scroll-table">
+        <table class="mdl-data-table mdl-js-data-table manage-table">
+          <thead>
+          <tr>
+            <th colspan="2" id="media"><h4>Manage Media</h4></th>
+          </tr>
+          </thead>
+          <tbody>
+          <tr class="manage-row">
+            <th class="mdl-data-table__cell--non-numeric main">
+              <h4>Images</h4>
+            </th>
+            <td class="mdl-data-table__cell--non-numeric description">
+              <ul>
+                <% @all_image_types.each do |type| %>
                   <li class="mdl-list__item image-type">
-                      <span class="mdl-list__item-primary-content">
-                        <i class="material-icons mdl-list__item-icon"><%=@sym[type]%></i>
-                        <%= link_to @image_types[type], manage_images_path(type == :all ? -1 : type) %>
-                      </span>
-              <%end%>
-            </ul>
-          </td>
-        </tr>
-        <tr class="manage-row">
-          <td class="mdl-data-table__cell--non-numeric main">
-            <%= link_to 'Images', manage_images_path('all') %>
-          </td>
-          <td class="mdl-data-table__cell--non-numeric description">
-            <div>Manage all images</div>
-          </td>
-        </tr>
-      </tbody>
-    </table>
+                    <span class="mdl-list__item-primary-content">
+                      <i class="material-icons mdl-list__item-icon"><%=@sym[type]%></i>
+                      <%= link_to @image_types[type], manage_images_path(type == :all ? -1 : type) %>
+                    </span>
+                  </li>
+                <%end%>
+              </ul>
+            </td>
+          </tr>
+          <tr class="manage-row">
+            <th class="mdl-data-table__cell--non-numeric main">
+              <h4>Photographers</h4>
+            </th>
+            <td class="mdl-data-table__cell--non-numeric description">
+              <ul>
+                <li class="mdl-list__item image-type">
+                <span class="mdl-list__item-primary-content">
+                  <i class="material-icons mdl-list__item-icon"><%=@all_sym%></i>
+                  <%= link_to 'All Photographer', manage_photographers_path %>
+                </span>
+                </li>
+              </ul>
+            </td>
+          </tr>
+          </tbody>
+        </table>
+      </div>
+
+      <div class="scroll-table">
+        <table class="mdl-data-table mdl-js-data-table manage-table">
+          <thead>
+          <tr>
+            <th colspan="2" id="footer"><h4>Manage Footer</h4></th>
+          </tr>
+          </thead>
+          <tbody>
+          <tr class="manage-row">
+            <th class="mdl-data-table__cell--non-numeric main">
+              <h4>FAQ</h4>
+            </th>
+            <td class="mdl-data-table__cell--non-numeric description">
+              <ul>
+                <li class="mdl-list__item image-type">
+              <span class="mdl-list__item-primary-content">
+                <i class="material-icons mdl-list__item-icon"><%=@mange_sym%></i>
+                <%= link_to 'Edit', manage_questions_path %>
+              </span>
+                </li>
+              </ul>
+            </td>
+          </tr>
+
+          </tbody>
+        </table>
+      </div>
+
+
+    </div>
+
+
   </div>
 </div>
