--- a/app/views/photographers/manage.erb
+++ b/app/views/photographers/manage.erb
@@ -48,7 +48,7 @@
               </tr>
           <%end%>
       <% else %>
-          <tr><td colspan="6">No photographers yet./td></tr>
+          <tr><td colspan="6">No photographers saved yet.</td></tr>
       <%end%>
       </tbody>
     </table>
